footer overflow fixed

--- a/frontend/src/assets/stylesheets/footer.scss
+++ b/frontend/src/assets/stylesheets/footer.scss
@@ -5,7 +5,7 @@
     position: absolute;
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    width: 98%;
     // border: 2px solid orange;
     height: 10vh;
     bottom: 0;
